fixed 2nd slide far-mtn z-index -1 to 0

--- a/happy-birthday-73123/styles/card.css
+++ b/happy-birthday-73123/styles/card.css
@@ -142,7 +142,7 @@ main {
 #far-mtn {
     margin-top: -20lvh;
     top: -40lvh;
-    z-index: -1;
+    z-index: 0;
 }
 
 #close-mtn {
